deploy/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: fitnessai
  labels:
    name: fitnessai
    app.kubernetes.io/part-of: fitnessai
