deploy/service-server.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-app-server
spec:
  selector:
    app: my-app-server
  ports:
    - port: 8000
      targetPort: 8000
  type: ClusterIP
